# KilimanjaroOncology

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  SECURITY.md  SECURITY_DEPLOYMENT.md  TEST_TRACEABILITY.md  pyproject.toml  pytest.ini  requirements.tx  requirements.txt  setup.py  tox.ini  tree.txt
.github/: dependabot.yml
.github/workflows/: quality-gate.yml  sbom.yml  scorecard.yml
src/app/: main.py
src/app/classes/: oncology_patient_data.py
src/app/csv_files/: Cause_of_Death.CSV  N_stage.CSV
src/app/database/: database_service.py  schema.sql
src/app/gui/: app.py  common_widgets.py  config_screen.py  death_screen.py  follow_up_screen.py  main_app.py  new_diagnosis_screen.py  settings_creator.py  test_autocomplete.py
src/app/utils/: config.py  setup.py
src/kilimanjaro_oncology/: main.py
src/kilimanjaro_oncology/classes/: oncology_patient_data.py
src/kilimanjaro_oncology/controllers/: record_controller.py
src/kilimanjaro_oncology/csv_files/: CarePlan.CSV  Diagnosis.ICD10.csv  Histopathology.CSV  M_stage.CSV  T_stage.CSV  Therapy.CSV
src/kilimanjaro_oncology/database/: database_service.py  schema.sql
src/kilimanjaro_oncology/gui/: app.py  common_widgets.py  config_screen.py  death_screen.py  follow_up_screen.py  main_app.py  new_diagnosis_screen.py  refactor.txt  settings_creator.py  test_autocomplete.py
src/kilimanjaro_oncology/utils/: config.py  exceptions.py  logger.py  setup.py
tests/: conftest.py  test_app.py  test_app_gui.py  test_common_widgets.py  test_config_manager.py  test_config_screen.py  test_database.py  test_database_service.py  test_death_screen.py  test_follow_up_screen.py  test_gui_mixins.py  test_integration_flow.py  test_logger.py  test_main_app.py  test_main_app_run.py  test_main_entrypoint.py  test_new_diagnosis_screen.py  test_nonfunctional_integration.py  test_oncology_patient_data.py  test_record_controller.py  test_system_flow.py
tools/: auto-fix.sh  quality-gate.sh  security-deep.sh
