[project]
name = "KilimanjaroOncologyDataCollectionDemo"
version = "0.1.0"
description = "Data collection demonstration application for Kilimanjaro Oncology Unit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
name = "KilimanjaroOncologyDataCollectionDemo"
version = "0.1.0"
description = "Data collection demonstration application for Kilimanjaro Oncology Unit."
authors = ["Ashley Maher <ashley.maher@didymodesigns.com.au>"]
license = "GPL V3"
readme = "README.md"
packages = [
    { include = "kilimanjaro_oncology", from = "src" }
]

[tool.poetry.scripts]
KilimanjaroOncology = "kilimanjaro_oncology.main:main"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.36"
python-dotenv = "^1.0.0"
cryptography = "^44.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
sqlalchemy2-stubs = "^0.0.2a38"
tox = "^4.23.2"
pre-commit = "^4.0.1"
mypy = "^1.14.0"
pytest-mock = "^3.14.0"
safety = "^3.2.14"
pip-audit = "^2.7.3"
cyclonedx-python-lib = "<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "coverage[toml]>=7.13.2",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-setuptools>=80.10.0.20260124",
]

[tool.black]
line-length = 80
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest]
pythonpath = "."

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle/pyflakes
  "I",                  # import sorting (isort-style)
  "B",                  # flake8-bugbear
  "UP",                 # pyupgrade
  "SIM",                # flake8-simplify
  "C4",                 # flake8-comprehensions
  "S",                  # flake8-bandit (lightweight security)
]
ignore = [
  "E501",               # line length handled by formatter policy; adjust as preferred
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # allow assert in tests

# Bandit reads config from pyproject.toml only when passed -c pyproject.toml. :contentReference[oaicite:9]{index=9}
[tool.bandit]
exclude_dirs = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
  ".venv/*",
  "venv/*",
  "build/*",
  "dist/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
